Fix incorrect spacing in download success panel

--- a/src/assets/scss/_maps_redux.scss
+++ b/src/assets/scss/_maps_redux.scss
@@ -87,6 +87,10 @@
     flex-direction: column;
     height: 100%;
 
+    .mr-authors {
+      height: 100%;
+    }
+
     .mr-buttons {
       display: flex;
       flex-direction: row;
@@ -140,7 +144,6 @@
   gap: 4px;
   justify-content: center;
   margin-bottom: 4px;
-  height: 100%;
 
   .mr-author {
     position: relative;
@@ -154,9 +157,6 @@
       margin-top: .25rem;
       border-radius: .25rem;
       image-rendering: pixelated;
-    }
-
-    span {
     }
 
     &:not(:last-child)::after {
